# dungeonesis-tracker

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml  tsconfig.json  webpack.config.js
dungeonesis/: settings.py  urls.py  wsgi.py
dungeonesis/settings/: base.py  dev.py  production.py
dungeonesis/static/: manifest.json
dungeonesis/templates/: base.html
exptracker/: api.py  apps.py  models.py  urls.py  utils.py
exptracker/api/: __init__.py  characters.py  serializers.py  user.py
exptracker/migrations/: 0001_initial.py  0002_user_unspent_points.py  0003_character.py  0004_auto_20190522_1424.py  0005_logentry.py  0006_auto_20190524_1518.py  0007_logentry_created_at.py  0008_auto_20190525_2109.py  0009_auto_20190525_2113.py  0010_character_dead.py  0011_reformat_20190617_1947.py  0012_character_iron_man.py
home/templates/home/: index.html
src/: index.ts  shims.d.ts  store.ts  utils.ts
src/components/: character-list.ts  character-list.vue  header-bar.ts  header-bar.vue  main.ts  main.vue  overview.ts  router.ts  router.vue
src/components/modals/: changelog-modal.ts  changelog-modal.vue  character-add-modal.ts  character-add-modal.vue  character-delete-modal.ts  character-delete-modal.vue  character-rename-modal.ts  character-rename-modal.vue  logs-modal.ts  logs-modal.vue  star-adjust-modal.ts  star-adjust-modal.vue
src/components/pages/: character-page.ts  character-page.vue  overview-page.ts  overview-page.vue
src/styles/: _banners.scss  _page.scss  _transitions.scss  app.scss
(+5 files in other folders)
