[tool.poetry]
name = "dungeonesis"
version = "0.1.0"
description = "An experience tracker for use with the Gate Marches campaign."
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
